# trabalho_cd

./: .gitignore  ANALYSES.md  CHECKLIST.md  INDEX.md  Makefile  PROJECT_STRUCTURE.py  QUICK_START.md  README.md  SUMMARY.md  VISUAL_TUTORIAL.md  app.py  app_v2.py  generate_sample_data.py  pyproject.toml  requirements.txt  run.ps1  run_pipeline.py  run_simple.ps1  test_config.py
conf/: config.yaml  data.yaml
data/: runs_simulated.json
reports/analysis_results/: analise1_fumantes.csv  analise2_runners.csv  analise3_idade.csv  analise4_bpm_global.csv  analise4_bpm_por_idade.csv
src/: __init__.py  analysis.py  analysis_v2.py  dataio.py  modeling.py  plots.py  preprocess.py  schema.py  utils.py
